data/style.css
body {
  font: 100% arial, helvetica, sans-serif;
  background-color: #F5F5F5;
}
textarea {
  width: 180px;
  height: 180px;
  margin: 10px;
  padding: 0px;
}
.report-table table {
  border: 1px solid #D0D0D0;
  margin: 20px;
}
.report-table th {
  border-bottom: 1px solid #D0D0D0;
  background-color: #F2F2F2;
}
.bad h3 {
  color: red;
}
.form {
  float: left;
}
.hide {
  visibility: hidden;
}
.icon {
  float: left;
}
.password-field {
  width: 90px;
}
#analyze-button {
  margin-bottom: 5px;
}

